# HexBase

./: CMakeLists.txt  readme.md
src/include/: hexagon.hpp
src/include/HexBase/: application.hpp  module.hpp
src/include/hexBase/: adapter.hpp  application.hpp  module.hpp  port.hpp
tests/test0/: CMakeLists.txt
tests/test0/src/: helloWorldModule.hpp  helloWorldPort.hpp  main.cpp  test0.cpp  testAdapter.cpp  testAdapter.hpp  testApp.hpp
